--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -1,9 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.  They are
-# provided by a third-party and are governed by separate terms of service,
-# privacy policy, and support documentation.
-#
-# This workflow will install a prebuilt Ruby version, install dependencies, and
-# run tests and linters.
+# Workflow based off prebuilt Ruby on Rails CI file with additional modifications
 name: "Ruby on Rails CI"
 on:
   push:
@@ -28,17 +23,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      # Add or replace dependency steps here
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
         with:
           bundler-cache: true
-      # Add or replace database setup steps here
       - name: Set up database schema
-        run: bin/rails db:schema:load
-      # Add or replace test runners here
-      - name: Run tests
-        run: bin/rake
+        run: |
+          bundle install
+          bundle exec rails webpacker:install
+          bundle exec rails db:setup
 
   lint:
     runs-on: ubuntu-latest
@@ -50,9 +43,7 @@ jobs:
         with:
           bundler-cache: true
       # Add or replace any other lints here
-      - name: Security audit dependencies
-        run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
-      - name: Lint Ruby files
-        run: bin/rubocop --parallel
+      #- name: Security audit application code
+      #  run: bundle exec brakeman -q -w2
+      #- name: Lint Ruby files
+      #  run: bundle exec rubocop --parallel
